--- a/www/composer.json
+++ b/www/composer.json
@@ -44,7 +44,8 @@
         "maatwebsite/excel": "^3.1",
         "dompdf/dompdf": "^0.8.3",
         "ext-json": "*",
-        "bvanhoekelen/performance": "^2.5"
+        "bvanhoekelen/performance": "^2.5",
+        "webpatser/laravel-uuid": "^3.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.7",
