--- a/www/plugins/demo/core/models/modelmodel/columns.yaml
+++ b/www/plugins/demo/core/models/modelmodel/columns.yaml
@@ -1,7 +1,7 @@
 columns:
     id:
         label: id
-        type: number
+        type: text
     name:
         searchable: true
         label: name
