Added m2m widget lib

--- a/www/plugins/demo/report/models/widget/fields.yaml
+++ b/www/plugins/demo/report/models/widget/fields.yaml
@@ -28,8 +28,8 @@ fields:
         type: relation
 tabs:
     fields:
-        library:
-            label: Library
+        libraries:
+            label: Libraries
             nameFrom: name
             descriptionFrom: description
             span: auto
