--- a/www/composer.json
+++ b/www/composer.json
@@ -45,7 +45,8 @@
         "dompdf/dompdf": "^0.8.3",
         "ext-json": "*",
         "bvanhoekelen/performance": "^2.5",
-        "webpatser/laravel-uuid": "^3.0"
+        "webpatser/laravel-uuid": "^3.0",
+        "timgws/query-builder-parser": "^1.5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.7",
