--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ www/storage/temp
 www/storage/framework
 www/vendor/*
 !www/vendor/october
+!www/vendor/swooletw
 www/install.php
 www/install-master
 www/tests
