--- a/www/composer.json
+++ b/www/composer.json
@@ -38,15 +38,16 @@
         "october/system": "~1.0",
         "october/backend": "~1.0",
         "october/cms": "~1.0",
-        "laravel/framework": "^7.0",
+        "laravel/framework": "^5.5",
         "wikimedia/composer-merge-plugin": "dev-master",
-        "phpunit/phpunit": "^8.5",
+        "phpunit/phpunit": "^6.5.14",
         "maatwebsite/excel": "^3.1",
         "dompdf/dompdf": "^0.8.3",
         "ext-json": "*",
         "bvanhoekelen/performance": "^2.5",
         "webpatser/laravel-uuid": "^3.0",
-        "swooletw/laravel-swoole": "^2.0"
+        "swooletw/laravel-swoole": "^2.0",
+        "timgws/query-builder-parser": "^1.5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.7",
@@ -55,13 +56,13 @@
         "squizlabs/php_codesniffer": "3.*",
         "jakub-onderka/php-parallel-lint": "^1.0"
     },
-    "autoload-dev": {
-        "classmap": [
-            "tests/TestCase.php",
-            "tests/UiTestCase.php",
-            "tests/PluginTestCase.php"
-        ]
-    },
+    //"autoload-dev": {
+    //    "classmap": [
+    //        "tests/TestCase.php",
+    //        "tests/UiTestCase.php",
+     //       "tests/PluginTestCase.php"
+    //    ]
+    //},
     "scripts": {
         "post-create-project-cmd": [
             "php artisan key:generate",
