--- a/www/plugins/demo/casemanager/models/casemodel/filter.yaml
+++ b/www/plugins/demo/casemanager/models/casemodel/filter.yaml
@@ -1,33 +1,33 @@
-# ===================================
-# Filter Scope Definitions
-# ===================================
-
-scopes:
-
-  case_number:
-    label: Case Number
-    conditions: case_number iLike '%:filtered%'
-    type: text
-
-  priority:
-    label: Priority
-    modelClass: Demo\CaseManager\Models\CasePriority
-    conditions: priority_id in (:filtered)
-    nameFrom: name
-
-  queue:
-    label: Queue
-    modelClass: Demo\Workflow\Models\Queue
-    conditions: queue_id in (:filtered)
-    nameFrom: name
-
-  state:
-    label: State
-    modelClass: Demo\Workflow\Models\WorkflowState
-    conditions: workflow_state_id in (:filtered)
-    nameFrom: name
-
-  created_at:
-    label: Created
-    type: daterange
-    conditions: created_at >= ':after' AND created_at <= ':before'
+## ===================================
+## Filter Scope Definitions
+## ===================================
+#
+#scopes:
+#
+#  case_number:
+#    label: Case Number
+#    conditions: case_number iLike '%:filtered%'
+#    type: text
+#
+#  priority:
+#    label: Priority
+#    modelClass: Demo\CaseManager\Models\CasePriority
+#    conditions: priority_id in (:filtered)
+#    nameFrom: name
+#
+#  queue:
+#    label: Queue
+#    modelClass: Demo\Workflow\Models\Queue
+#    conditions: queue_id in (:filtered)
+#    nameFrom: name
+#
+#  state:
+#    label: State
+#    modelClass: Demo\Workflow\Models\WorkflowState
+#    conditions: workflow_state_id in (:filtered)
+#    nameFrom: name
+#
+#  created_at:
+#    label: Created
+#    type: daterange
+#    conditions: created_at >= ':after' AND created_at <= ':before'
