added display settings

--- a/www/plugins/demo/tenant/models/tenant/fields.yaml
+++ b/www/plugins/demo/tenant/models/tenant/fields.yaml
@@ -99,7 +99,7 @@ tabs:
             span: auto
             required: 1
             type: dropdown
-            tab: backend::lang.branding.favicon
+            tab: Settings
             options:
                 nobleui: Basic
                 #adminlte: Admin
