--- a/www/plugins/demo/core/plugin.yaml
+++ b/www/plugins/demo/core/plugin.yaml
@@ -1,4 +1,4 @@
-application:
+plugin:
     name: 'demo.core::lang.application.name'
     description: 'demo.core::lang.application.description'
     author: vikrant
@@ -41,10 +41,6 @@ navigation:
                 label: 'Event Handler'
                 url: demo/core/eventhandler
                 icon: icon-code
-            side-menu-item6:
-                label: 'Inbound Api'
-                url: demo/core/inboundapi
-                icon: icon-space-shuttle
             side-menu-item9:
                 label: Commands
                 url: demo/core/command
@@ -53,10 +49,6 @@ navigation:
                 label: Iframe
                 url: demo/core/iframecontroller
                 icon: icon-external-link
-            side-menu-item3:
-                label: Webhooks
-                url: demo/core/webhookcontroller
-                icon: icon-chain
             side-menu-item7:
                 label: Libraries
                 url: demo/core/javascriptlibrarycontroller
@@ -129,6 +121,23 @@ navigation:
                 label: 'Navigation Role Associations'
                 url: demo/core/viewroleassociationcontroller
                 icon: icon-arrows
+    main-menu-item3:
+        label: Apis
+        url: demo/core/inboundapicontroller
+        icon: icon-life-ring
+        sideMenu:
+            side-menu-item:
+                label: 'Inbound APIs'
+                url: demo/core/inboundapicontroller
+                icon: icon-paper-plane
+            side-menu-item2:
+                label: Weebhooks
+                url: demo/core/webhookcontroller
+                icon: icon-anchor
+            side-menu-item3:
+                label: Endpoints
+                url: demo/core/webhookendpointcontroller
+                icon: icon-plane
 permissions:
     'demo.core::models.model.row.read':
         tab: 'Read Permission'
