--- a/www/plugins/demo/workflow/plugin.yaml
+++ b/www/plugins/demo/workflow/plugin.yaml
@@ -1,4 +1,4 @@
-application:
+plugin:
     name: 'demo.workflow::lang.application.name'
     description: 'demo.workflow::lang.application.description'
     author: vikrant
