--- a/www/plugins/demo/workflow/models/servicechannel/fields.yaml
+++ b/www/plugins/demo/workflow/models/servicechannel/fields.yaml
@@ -69,9 +69,9 @@ tabs:
             label: '&nbsp;'
             span: full
             relation: HasMany
-            sourceKey: id
+            targetKey: id
             targetModel: Demo\Workflow\Models\Queue
-            targetKey: service_channel_id
+            key: service_channel_id
             type: relatedlist
             tab: 'Queues'
 
