--- a/www/plugins/demo/casemanager/models/casemodel/columns.yaml
+++ b/www/plugins/demo/casemanager/models/casemodel/columns.yaml
@@ -10,8 +10,8 @@ columns:
         label: Suspect
         type: text
         searchable: true
-    tat_duration:
-        label: Tat
+    ttl:
+        label: TTL
         type: text
         searchable: true
     queue[name]:
