--- a/www/plugins/demo/workflow/models/queue/fields.yaml
+++ b/www/plugins/demo/workflow/models/queue/fields.yaml
@@ -98,11 +98,11 @@ tabs:
 secondaryTabs:
     fields:
         _queue_items:
-            label: 'Queue Items'
+            label: 'Tasks'
             span: full
             relation: HasMany
             targetKey: id
-            targetModel: Demo\Workflow\Models\QueueItem
+            targetModel: Demo\Workflow\Models\Task
             key: queue_id
             type: relatedlist
-            tab: 'Queue Items'
+            tab: 'Tasks'
