--- a/www/plugins/demo/workflow/models/workflow/columns.yaml
+++ b/www/plugins/demo/workflow/models/workflow/columns.yaml
@@ -2,28 +2,25 @@ columns:
     id:
         label: id
         type: text
-    created_at:
-        label: created_at
-        type: datetime
-    updated_at:
-        label: updated_at
-        type: datetime
-    active:
-        label: active
-        type: number
     name:
         searchable: true
         label: name
         type: text
-    description:
-        label: description
-        type: text
-    definition[queue]:
-        label: definition
-        type: switch
+    active:
+        label: active
+        type: number
+    priority:
+        label: priority
+        type: number
     created_by_id:
         label: created_by_id
         type: number
     updated_by_id:
         label: updated_by_id
         type: number
+    created_at:
+        label: created_at
+        type: datetime
+    updated_at:
+        label: updated_at
+        type: datetime
