--- a/www/plugins/demo/workflow/controllers/workcontroller/config_reorder.yaml
+++ b/www/plugins/demo/workflow/controllers/workcontroller/config_reorder.yaml
@@ -1,4 +1,4 @@
 title: WorkflowEntities
-modelClass: Demo\Workflow\Models\WorkflowItem
+modelClass: Demo\Workflow\Models\Work
 toolbar:
     buttons: reorder_toolbar
