--- a/www/plugins/demo/workflow/models/workflow/fields.yaml
+++ b/www/plugins/demo/workflow/models/workflow/fields.yaml
@@ -81,13 +81,13 @@ tabs:
                         span: auto
                         type: relation
                         required: 1
-        _workflow_item:
-            label: 'Workflow Items'
+        _work:
+            label: 'Works'
             span: full
-            targetModel: Demo\Workflow\Models\WorkflowItem
+            targetModel: Demo\Workflow\Models\Work
             list: default
             type: relatedlist
-            tab: 'Workflow Items'
+            tab: 'Works'
             query:
                 where:
                     workflow_id: '{{model.id}}'
@@ -101,8 +101,8 @@ tabs:
             tab: 'Workflow Transitions'
             query:
                 join:
-                    model: Demo\Workflow\Models\WorkflowItem
+                    model: Demo\Workflow\Models\Work
                     key: id
-                    targetKey: workflow_item_id
+                    targetKey: work_id
                     where:
                         workflow_id: '{{model.id}}'
