--- a/www/plugins/demo/workflow/plugin.yaml
+++ b/www/plugins/demo/workflow/plugin.yaml
@@ -8,7 +8,7 @@ model-alias:
     Workflow: Workflows
     Queue: Queues
     Task: Tasks
-    WorkflowItem: 'Workflow Item'
+    work: 'Work'
     WorkflowTransition: 'Workflow Transition'
 navigation:
     main-menu-item:
@@ -24,8 +24,8 @@ navigation:
                 url: demo/workflow/workflow
                 icon: icon-recycle
             side-menu-item4:
-                label: 'Workflow Items'
-                url: demo/workflow/workflowitemcontroller
+                label: 'Works'
+                url: demo/workflow/workcontroller
                 icon: icon-tag
             side-menu-item5:
                 label: 'Workflow Transitions'
